[package]
authors = ["Juan Lledo <juan.lledo@hotmail.com>"]
edition = "2018"
name = "remote-control"
version = "0.1.0"

[package.metadata.winres]
FileDescription = "Remote Control"

[build-dependencies]
winres = "0.1.11"

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
anyhow = "1.0.44"
config = "0.11.0"
directories = "3.0.2"
enigo = "0.0.14"
env_logger = "0.9.0"
futures = "0.3.17"
log = "0.4.14"
log4rs = "1.0.0"
nom = "7.0.0"
serde = { version = "1.0.130", features = ["derive"] }
